--- a/package.json
+++ b/package.json
@@ -13,9 +13,11 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.6.7",
     "formik": "^2.4.5",
+    "nanoid": "^5.0.6",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
     "react-helmet-async": "^2.0.4",
+    "react-hot-toast": "^2.4.1",
     "react-icons": "^5.0.1",
     "react-modal": "^3.16.1",
     "react-redux": "^9.1.0",
